--- a/offchain-modules/crates/dex1-assembler/Cargo.toml
+++ b/offchain-modules/crates/dex1-assembler/Cargo.toml
@@ -9,9 +9,14 @@ edition = "2021"
 otx-traits = { path = "../otx-traits" }
 
 anyhow = "1.0.86"
+blake2b-ref = "0.3.1"
+ckb-hash = "0.116.1"
 ckb-jsonrpc-types = "0.116.1"
 ckb-sdk = "3.2.0"
 ckb-types = "0.116.1"
+ethnum = "1.5.0"
+log = "0.4.21"
 molecule = "0.7.5"
 num-rational = "0.4.2"
+secp256k1 = { version = "0.24", features = ["recovery"] }
 serde = { version = "1.0", features = ["derive"] }
