--- a/offchain-modules/crates/dex1-helper/Cargo.toml
+++ b/offchain-modules/crates/dex1-helper/Cargo.toml
@@ -7,11 +7,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dex1-assembler = { path = "../dex1-assembler" }
+
 clap = { version = "4.5.4", features = ["cargo"] }
 ckb-sdk = "3.2.0"
 ckb-hash = "0.116.1"
 ckb-jsonrpc-types = "0.116.1"
 ckb-types = "0.116.1"
 flexi_logger = "0.28.1"
+jsonrpc-core = "18.0"
 log = "0.4.21"
+reqwest = { version = "0.11", default-features = false, features = [ "json", "blocking" ] }
 secp256k1 = { version = "0.24", features = ["recovery"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+toml = "0.5"
